kube/front/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: product-ui
  name: product-ui
  namespace: project
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: product-ui
  type: NodePort
status:
  loadBalancer: {}
