kube/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ui-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ui.product.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-ui
            port:
              number: 80
